--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "application_name",
-  "version": "2.0.0",
+  "name": "bk_backoffice",
+  "version": "1.0.0",
   "description": "Small description",
   "main": "index.js",
   "license": "UNLICENSED",
@@ -13,18 +13,19 @@
     "linux"
   ],
   "scripts": {
-    "staging": "nodemon ./src/index.js",
-    "eslint:check": "eslint 'src/**/*.{js,jsx}' --fix",
-    "format": "prettier \"./src/**/*.js\" --write",
-    "start": "node src/index.js",
+    "staging": "nodemon ./src/index.ts",
+    "eslint:check": "eslint 'src/**/*.{ts,tsx}' --fix",
+    "format": "prettier \"./src/**/*.ts\" --write",
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "console:staging": "nodemon --experimental-repl-await ./src/console.js",
     "console:prod": "node --experimental-repl-await ./src/console.js"
   },
   "keywords": [],
   "author": "FoodZilla",
   "dependencies": {
-    "@sentry/node": "6.7.1",
-    "@sentry/tracing": "6.2.5",
+    "@sentry/node": "6.11.0",
+    "@sentry/tracing": "6.11.0",
+    "aws-sdk": "2.975.0",
     "bcryptjs": "2.4.3",
     "body-parser": "1.19.0",
     "commitlint": "12.1.1",
@@ -35,6 +36,7 @@
     "express": "4.17.1",
     "express-http-context": "1.2.4",
     "express-rate-limit": "5.2.6",
+    "express-validator": "6.12.0",
     "fs": "0.0.1-security",
     "helmet": "4.2.0",
     "js-logger": "1.6.1",
@@ -43,12 +45,19 @@
     "mongoose": "5.12.3",
     "nodemon": "2.0.4",
     "repl": "0.1.3",
-    "request-ip": "2.1.3"
+    "request-ip": "2.1.3",
+    "sqs-consumer": "5.5.0",
+    "sucrase": "3.20.1",
+    "typescript": "4.3.5"
   },
   "devDependencies": {
-    "@babel/core": "7.13.10",
-    "@babel/preset-env": "7.13.10",
+    "@babel/cli": "7.14.8",
+    "@babel/core": "7.15.0",
+    "@babel/node": "7.14.9",
+    "@babel/preset-env": "7.15.0",
+    "@babel/preset-typescript": "7.15.0",
     "@commitlint/cli": "12.1.1",
+    "babel-plugin-module-resolver": "4.1.0",
     "@commitlint/config-conventional": "12.1.1",
     "@shelf/jest-mongodb": "1.2.4",
     "@types/cors": "2.8.6",
@@ -59,24 +68,27 @@
     "@types/lodash": "4.14.149",
     "@types/mongoose": "5.5.32",
     "@types/throng": "5.0.0",
+    "@typescript-eslint/eslint-plugin": "4.29.3",
+    "@typescript-eslint/parser": "4.29.3",
     "babel-eslint": "10.1.0",
     "babel-jest": "26.6.3",
     "commitizen": "4.2.3",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "7.9.0",
+    "eslint": "7.32.0",
     "eslint-config-airbnb-base": "14.2.0",
-    "eslint-config-prettier": "6.4.0",
-    "eslint-plugin-import": "2.22.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-config-standard": "16.0.3",
+    "eslint-plugin-import": "2.24.1",
     "eslint-plugin-jest": "22.6.4",
-    "eslint-plugin-node": "9.1.0",
-    "eslint-plugin-prettier": "3.1.1",
-    "eslint-plugin-promise": "4.1.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.4.1",
+    "eslint-plugin-promise": "5.1.0",
     "eslint-plugin-standard": "4.0.0",
     "husky": "3.0.9",
     "lint": "0.7.0",
     "lint-staged": "10.4.0",
     "madge": "4.0.2",
-    "prettier": "2.2.1",
+    "prettier": "2.3.2",
     "pretty-quick": "3.1.0"
   },
   "husky": {
